# JetBrainsMarketplaceBadge

./: Cargo.toml  build.sh  setupLocal.sh  test.html  test.md
.github/workflows/: main.yml
rsc/: default_badge.mustache
src/: file_writer.rs  generate.rs  main.rs
